load(
    "//ign_bazel:generate_include_header.bzl",
    "generate_include_header",
)

generated_includes = [
    "dynamics",
    "common",
    "math",
    "integration",
    "lcpsolver",
    "constraint",
    "optimizer",
    "simulation",
]

[
    generate_include_header(
        name = "%s_genrule" % subdir,
        out = "dart/%s/%s.hpp" % (subdir, subdir),
        hdrs = glob([
            "dart/%s/*.hpp" % subdir,
        ]),
    )
    for subdir in generated_includes
]

# collision has two subdirectories with generated includes unlike the above
# so treat it as a separate case
generate_include_header(
    name = "collision_fcl_genrule",
    out = "dart/collision/fcl/fcl.hpp",
    hdrs = glob([
        "dart/collision/fcl/*.hpp",
    ]),
)

generate_include_header(
    name = "collision_dart_genrule",
    out = "dart/collision/dart/dart.hpp",
    hdrs = glob([
        "dart/collision/dart/*.hpp",
    ]),
)

generate_include_header(
    name = "collision_genrule",
    out = "dart/collision/collision.hpp",
    hdrs = glob([
        "dart/collision/*.hpp",
    ]) + [
        "dart/collision/dart/dart.hpp",
        "dart/collision/fcl/fcl.hpp",
    ],
)

cc_library(
    name = "dart-dynamics",
    srcs = glob([
        "dart/dynamics/*.cpp",
        "dart/dynamics/detail/*.cpp",
        "dart/dynamics/*.hpp",
        "dart/dynamics/detail/*.hpp",
    ]) + [
        "dart/dynamics/dynamics.hpp",
    ],
    hdrs = glob([
        "dart/dynamics/*.hpp",
        "dart/dynamics/detail/*.hpp",
    ]),
    copts = [
        "-Idart",
    ],
    visibility = ["//visibility:private"],
    deps = [
        ":dart-common",
        ":dart-external",
        ":dart-math",
        ":dart-optimizer",
        "@eigen3",
    ],
    alwayslink = 1,
)

cc_library(
    name = "dart-math",
    srcs = glob([
        "dart/math/*.cpp",
        "dart/math/detail/*.cpp",
        "dart/math/*.hpp",
        "dart/math/detail/*.hpp",
    ]) + [
        "dart/math/math.hpp",
    ],
    hdrs = glob([
        "dart/math/*.hpp",
        "dart/math/detail/*.hpp",
    ]),
    copts = [
        "-Idart",
    ],
    visibility = ["//visibility:private"],
    deps = [
        ":dart-common",
        "@eigen3",
    ],
    alwayslink = 1,
)

cc_library(
    name = "dart-common",
    srcs = glob([
        "dart/common/*.cpp",
        "dart/common/detail/*.cpp",
        "dart/common/*.hpp",
        "dart/common/detail/*.hpp",
        "dart/config.hpp",
    ]) + [
        "dart/common/common.hpp",
    ],
    hdrs = glob([
        "dart/common/*.hpp",
        "dart/common/detail/*.hpp",
        "dart/config.hpp",
    ]),
    copts = [
        "-Idart",
    ],
    includes = ["."],
    linkopts = [
        "-lboost_system",
        "-lboost_regex",
        "-lboost_filesystem",
        "-ltinyxml2",
        "-lassimp",
        "-ldl",
    ],
    visibility = ["//visibility:private"],
    deps = [
        "@eigen3",
    ],
    alwayslink = 1,
)

cc_library(
    name = "dart-gui",
    srcs = glob([
        "dart/gui/*.cpp",
        "dart/gui/glut/*.cpp",
        "dart/gui/osg/*.cpp",
        "dart/gui/osg/render/*.cpp",
        "dart/gui/*.hpp",
        "dart/gui/glut/*.hpp",
        "dart/gui/osg/*.hpp",
        "dart/gui/osg/render/*.hpp",
    ]),
    hdrs = glob([
        "dart/gui/*.hpp",
        "dart/gui/glut/*.hpp",
        "dart/gui/osg/*.hpp",
        "dart/gui/osg/render/*.hpp",
    ]),
    copts = [
        "-Idart",
    ],
    linkopts = [
        "-losg",
        "-losgDB",
        "-losgGA",
        "-losgManipulator",
        "-losgShadow",
        "-losgViewer",
        "-lglut",
        "-lGL",
        "-lGLU",
    ],
    visibility = ["//visibility:private"],
    deps = [
        ":dart-common",
        ":dart-constraint",
        ":dart-dynamics",
        ":dart-external",
        ":dart-math",
        ":dart-simulation",
        ":dart-utils",
        "@eigen3",
    ],
    alwayslink = 1,
)

cc_library(
    name = "dart-collision-core",
    srcs = glob([
        "dart/collision/*.cpp",
        "dart/collision/detail/*.cpp",
        "dart/collision/*.hpp",
        "dart/collision/detail/*.hpp",
    ]) + [
        "dart/collision/collision.hpp",
        "dart/collision/fcl/fcl.hpp",
        "dart/collision/dart/dart.hpp",
    ],
    hdrs = glob([
        "dart/collision/*.hpp",
        "dart/collision/detail/*.hpp",
    ]),
    copts = [
        "-Idart",
    ],
    visibility = ["//visibility:private"],
    deps = [
        ":dart-dynamics",
        ":dart-math",
        "@eigen3",
    ],
    alwayslink = 1,
)

cc_library(
    name = "dart-collision-ode",
    srcs = glob([
        "dart/collision/ode/*.cpp",
        "dart/collision/ode/detail/*.cpp",
        "dart/collision/ode/*.hpp",
        "dart/collision/ode/detail/*.hpp",
    ]),
    hdrs = glob([
        "dart/collision/ode/*.hpp",
        "dart/collision/ode/detail/*.hpp",
    ]),
    copts = [
        "-Idart",
    ],
    linkopts = [
        "-lode",
    ],
    visibility = ["//visibility:private"],
    deps = [
        ":dart-collision-core",
        ":dart-dynamics",
        ":dart-math",
        "@eigen3",
    ],
    alwayslink = 1,
)

cc_library(
    name = "dart-collision-fcl",
    srcs = glob([
        "dart/collision/fcl/*.cpp",
        "dart/collision/fcl/*.hpp",
    ]),
    hdrs = glob([
        "dart/collision/fcl/*.hpp",
    ]),
    copts = [
        "-Idart",
    ],
    linkopts = ["-lfcl"],
    visibility = ["//visibility:private"],
    deps = [
        ":dart-collision-core",
        ":dart-dynamics",
        ":dart-math",
        "@eigen3",
    ],
    alwayslink = 1,
)

cc_library(
    name = "dart-collision-dart",
    srcs = glob([
        "dart/collision/dart/*.cpp",
        "dart/collision/dart/*.hpp",
    ]),
    hdrs = glob([
        "dart/collision/dart/*.hpp",
    ]),
    copts = [
        "-Idart",
    ],
    visibility = ["//visibility:private"],
    deps = [
        ":dart-collision-core",
        ":dart-dynamics",
        ":dart-math",
        "@eigen3",
    ],
    alwayslink = 1,
)

cc_library(
    name = "dart-collision",
    visibility = ["//visibility:private"],
    deps = [
        ":dart-collision-core",
        ":dart-collision-dart",
        ":dart-collision-fcl",
        ":dart-collision-ode",
    ],
    alwayslink = 1,
)

cc_library(
    name = "dart-external",
    srcs = glob([
        "dart/external/imgui/*.cpp",
        "dart/external/lodepng/*.cpp",
        "dart/external/odelcpsolver/*.cpp",
        "dart/external/imgui/*.h",
        "dart/external/ikfast/*.h",
        "dart/external/lodepng/*.h",
        "dart/external/odelcpsolver/*.h",
    ]),
    hdrs = glob([
        "dart/external/imgui/*.h",
        "dart/external/ikfast/*.h",
        "dart/external/lodepng/*.h",
        "dart/external/odelcpsolver/*.h",
    ]),
    copts = [
        "-Idart",
    ],
    visibility = ["//visibility:private"],
    alwayslink = 1,
)

cc_library(
    name = "dart-constraint",
    srcs = glob([
        "dart/constraint/*.cpp",
        "dart/constraint/*.hpp",
        "dart/constraint/detail/*.hpp",
    ]) + [
        "dart/constraint/constraint.hpp",
    ],
    hdrs = glob([
        "dart/constraint/*.hpp",
        "dart/constraint/detail/*.hpp",
    ]),
    copts = [
        "-Idart",
    ],
    visibility = ["//visibility:private"],
    deps = [
        ":dart-collision",
        ":dart-common",
        ":dart-dynamics",
        ":dart-external",
        ":dart-lcpsolver",
        ":dart-math",
        "@eigen3",
    ],
    alwayslink = 1,
)

cc_library(
    name = "dart-simulation",
    srcs = glob([
        "dart/simulation/*.cpp",
        "dart/simulation/*.hpp",
        "dart/simulation/detail/*.hpp",
    ]) + [
        "dart/simulation/simulation.hpp",
    ],
    hdrs = glob([
        "dart/simulation/*.hpp",
        "dart/simulation/detail/*.hpp",
    ]),
    copts = [
        "-Idart",
    ],
    visibility = ["//visibility:private"],
    deps = [
        ":dart-collision",
        ":dart-common",
        ":dart-constraint",
        ":dart-dynamics",
        ":dart-integration",
        "@eigen3",
    ],
    alwayslink = 1,
)

cc_library(
    name = "dart-integration",
    srcs = glob([
        "dart/integration/*.cpp",
        "dart/integration/*.hpp",
    ]) + [
        "dart/integration/integration.hpp",
    ],
    hdrs = glob([
        "dart/integration/*.hpp",
    ]),
    copts = [
        "-Idart",
    ],
    visibility = ["//visibility:private"],
    deps = [
        "@eigen3",
    ],
    alwayslink = 1,
)

cc_library(
    name = "dart-utils",
    srcs = glob([
        "dart/utils/*.cpp",
        "dart/sdf/*.cpp",
        "dart/urdf/*.cpp",
        "dart/utils/*.hpp",
        "dart/utils/sdf/*.hpp",
        "dart/utils/urdf/*.hpp",
    ]),
    hdrs = glob([
        "dart/utils/*.hpp",
        "dart/utils/sdf/*.hpp",
        "dart/utils/urdf/*.hpp",
    ]),
    copts = [
        "-Idart",
    ],
    visibility = ["//visibility:private"],
    deps = [
        ":dart-collision",
        ":dart-common",
        ":dart-dynamics",
        ":dart-math",
        ":dart-simulation",
        "@eigen3",
    ],
    alwayslink = 1,
)

cc_library(
    name = "dart-optimizer",
    srcs = glob([
        "dart/optimizer/*.cpp",
        "dart/optimizer/nlopt/*.cpp",
        "dart/optimizer/*.hpp",
        "dart/optimizer/nlopt/*.hpp",
    ]) + [
        "dart/optimizer/optimizer.hpp",
    ],
    hdrs = glob([
        "dart/optimizer/*.hpp",
        "dart/optimizer/nlopt/*.hpp",
    ]),
    copts = [
        "-Idart",
    ],
    linkopts = ["-lnlopt"],
    visibility = ["//visibility:private"],
    deps = [
        ":dart-common",
        ":dart-math",
        "@eigen3",
    ],
    alwayslink = 1,
)

cc_library(
    name = "dart-lcpsolver",
    srcs = glob([
        "dart/lcpsolver/*.cpp",
        "dart/lcpsolver/*.hpp",
    ]) + [
        "dart/lcpsolver/lcpsolver.hpp",
    ],
    hdrs = glob([
        "dart/lcpsolver/*.hpp",
    ]),
    copts = [
        "-Idart",
    ],
    visibility = ["//visibility:private"],
    deps = [
        ":dart-common",
        ":dart-external",
        ":dart-math",
        "@eigen3",
    ],
    alwayslink = 1,
)

cc_library(
    name = "dart",
    srcs = [
        "dart/dart.cpp",
        "dart/dart.hpp",
    ],
    hdrs = [
        "dart/dart.hpp",
    ],
    includes = ["dart"],
    visibility = ["//visibility:public"],
    deps = [
        ":dart-collision",
        ":dart-common",
        ":dart-constraint",
        ":dart-dynamics",
        ":dart-external",
        ":dart-gui",
        ":dart-integration",
        ":dart-lcpsolver",
        ":dart-math",
        ":dart-optimizer",
        ":dart-simulation",
        ":dart-utils",
    ],
    alwayslink = 1,
)

cc_binary(
    name = "hello_world",
    srcs = [
        "examples/hello_world/main.cpp",
    ],
    includes = ["dart"],
    deps = [
        ":dart",
        ":dart-collision",
        ":dart-common",
        ":dart-constraint",
        ":dart-dynamics",
        ":dart-external",
        ":dart-gui",
        ":dart-integration",
        ":dart-lcpsolver",
        ":dart-math",
        ":dart-optimizer",
        ":dart-simulation",
        ":dart-utils",
    ],
)
